# active-control-of-structures

./: README.md  pyproject.toml
active_control_of_structures/: functions.py  structural_parameters.py
examples/: example_2_5.ipynb  example_3_3.ipynb
tests/: test_functions.py  test_structural_parameters.py
